--- a/css/app.css
+++ b/css/app.css
@@ -2337,19 +2337,20 @@ html {
   content: ""; }
 
 body {
-  background-color: #EF5350;
+  background-color: white;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; }
 
 main {
-  padding-top: 4.5rem; }
+  padding-top: 0; }
 
 .sub-title {
   font-size: 1.2rem; }
 
 .intro {
-  height: 90vh; }
+  height: 90vh;
+  background-color: #EF5350; }
 
 .intro-title {
   text-align: center;
@@ -2358,7 +2359,7 @@ main {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 10rem; }
+  padding-top: 15rem; }
   .intro-title > h1 {
     color: #000;
     word-break: break-all;
@@ -2508,7 +2509,7 @@ p {
     display: none; } }
 @media screen and (min-width: 900px) {
   body {
-    background-color: #6A1B9A; }
+    background-color: white; }
 
   .intro-title {
     text-align: center;
@@ -2517,7 +2518,7 @@ p {
     width: 75%;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 10rem; }
+    padding-top: 15rem; }
     .intro-title > h1 {
       color: white;
       word-break: break-all;
@@ -2554,7 +2555,8 @@ p {
     text-align: center; }
 
   .intro {
-    height: 80vh; }
+    height: 90vh;
+    background-color: #6A1B9A; }
 
   .projects > .grid-items {
     max-width: 90%;
